# disaster-resource-management-project

./: .gitattributes  .gitignore  DISASTERGPT_TUTORIAL.md  GETTING_STARTED.md  README.md  api_docs.html  docker-compose.yml  package-lock.json
backend/: .env.example  .env.phase4.example  Dockerfile  check_spec.py  check_users_table.py  collect.txt  db_setup.py  debug.txt  debug_network.py  debug_relationships.py  err.txt  error_log.txt  errors2.txt  full_errors.txt  inspection_results.txt  list_disasters_all.py  main.py  out.txt  output.txt  pyproject.toml  pytest_output.txt  requirements.txt  schema_check.py  test_admin_api.py  test_admin_users.py  test_async_accessor.py  test_clients.py  test_prediction.py  test_reuse.py  test_simple.py  tests_out.txt
backend/app/: database.py  db_client.py  dependencies.py  schemas.py
backend/app/core/: cache.py  config.py  helpers.py  phase5_config.py  query_cache.py
backend/app/middleware/: __init__.py  logging_middleware.py  rate_limit.py
backend/app/monitoring/: __init__.py
backend/app/routers/: admin.py  advanced_ml.py  ai_insights.py  analytics.py  auth.py  causal.py  certifications.py  chat.py  coordinator.py  disasters.py  donor.py  global_disasters.py  hotspots.py  ingestion.py  interactivity.py  llm.py  ml_evaluation.py  ngo.py  nlp.py  predictions.py  realtime.py  resources.py  retrain.py  victim.py  victim_chatbot.py  victim_profile.py  volunteer.py  workflow.py
backend/app/services/: ai_insights_service.py  allocation_engine.py  anomaly_service.py  audit_report_generator.py  chatbot_service.py  data_quality_service.py  disaster_linking_service.py  distance.py  event_sourcing_service.py  explainability_service.py  forecast_service.py  global_disaster_service.py  ml_eval_service.py  ml_service.py  nl_query_service.py  nlp_service.py  notification_service.py  outcome_service.py  prestaging_service.py  privacy_service.py  sitrep_service.py  sla_service.py  unified_resource_service.py
backend/app/services/ingestion/: __init__.py  alert_service.py  firms_service.py  gdacs_service.py  memory_store.py  mock_data_service.py  orchestrator.py  social_service.py  usgs_service.py  weather_service.py
backend/app/services/training/: __init__.py  data_pipeline.py  train_all.py  train_impact.py  train_severity.py  train_spread.py
backend/database/: chatbot_sessions.sql
backend/lightning_logs/version_3/: hparams.yaml
backend/migrations/: env.py
backend/migrations/versions/: 78a35e20b59f_init_alembic.py  rl_allocation_log.py
backend/ml/: __init__.py  causal_model.py  clustering_service.py  data_pipeline.py  disaster_rag.py  evaluate_gat.py  fair_allocator.py  fairness_metrics.py  federated_service.py  finetune_llm.py  gat_model.py  graph_builder.py  moe_disaster_model.py  multi_agent.py  nlp_service.py  pinn_spread.py  rl_allocator.py  tft_model.py  train_gat.py  train_nlp.py  train_tft.py
backend/ml/models/: evaluation_report.txt  gat_allocator.pt  label_map.json  moe_disaster.pt
backend/ml/models/distilbert-crisis-urgency/: config.json  model.safetensors
backend/ml/models/distilbert-crisis-urgency/checkpoints/checkpoint-120/: trainer_state.json
backend/ml/models/tft_severity/: best_model.ckpt
backend/ml/models/tft_severity/lightning_logs/version_0/: hparams.yaml  metrics.csv
backend/models/: impact_metadata.json  impact_model.pkl  manifest.json  severity_metadata.json  spread_lower.pkl  spread_metadata.json  spread_model.pkl  spread_upper.pkl
backend/models/chroma_db/1fa93a14-3e73-4404-940d-67a5e067e66e/: index_metadata.pickle
backend/models/chroma_db/33adbd2a-4493-4f04-a15c-b88a5ea0fe30/: index_metadata.pickle
backend/models/chroma_db/999619ba-d313-49af-a8f4-d324f495ddb8/: index_metadata.pickle
backend/scratch/: update_db.py
backend/scripts/: collect_training_data.py  generate_training_data.py  inspect_db.py  ml_eval_harness.py  run_fix_sql.py  run_fk_migration.py
backend/tests/: test_predictions.py
backend/tests/unit/: test_dependencies.py  test_nlp_service.py
backend/training_data/: disaster_instructions.jsonl  disaster_instructions.meta.json  emdat_severity.csv  impact_casualties.csv  spread_area.csv
backend/training_data/tft_processed/: tft_dataset.parquet
database/: COMPLETE_SETUP.sql  MANUAL_FIX_AND_SEED.sql  ROLE_UPGRADE.sql  UPDATED_COMPLETE_SETUP.sql  add_location_name_column.sql  add_nlp_feedback_training_flag.sql  alter_resource_requests_items.sql  clean_reset.sql  cleanup_seed_data.sql  create_notifications.sql  create_resource_requests.sql  create_volunteer_ops.sql  current_sql_schema.sql  debug_auth_fix.sql  ensure_schema_setup.sql  fix_auth_schema.sql  fix_db_error.sql  fix_donor_type_constraint.sql  fix_duplicate_check.sql  (+29 more)
(+216 files in other folders)
